# NMiAI

./: .gitignore  README.md
AiAccountingAgent/: .dockerignore  Dockerfile  Implementationplan.md  documentation.md  logs.md  main.py  pyproject.toml
AiAccountingAgent/.docs/: overview.md  triplexAPIdocs.md
AiAccountingAgent/app/: agent.py  config.py  files.py  logging_setup.py  main.py  schemas.py  tools.py
AiAccountingAgent/app/tripletex/: client.py  errors.py
AstarIsland/: .gitignore  README.md  documentation.md  implementation-plan.md  main.py  pyproject.toml
AstarIsland/data/learned/: frontier-model-metadata.json  frontier-model.joblib  heuristic-backtest-summary.json  heuristic-calibration.json  trained-priors.json
AstarIsland/docs/: simulationmechanics.md
AstarIsland/src/astarisland/: __init__.py
AstarIsland/src/astarisland/application/: __init__.py  analysis.py  experiments.py  frontier_model.py  heuristic_v4.py  observations.py  prediction.py  rounds.py  solver.py  submissions.py
AstarIsland/src/astarisland/cli/: __init__.py  app.py
AstarIsland/src/astarisland/domain/: __init__.py  enums.py  features.py  frontier.py  models.py  query_planner.py  scoring.py  tensors.py
AstarIsland/tests/: __init__.py  conftest.py  test_api_client.py  test_domain.py  test_end_to_end.py  test_heuristic_v4.py  test_regression.py  test_round14_model.py
AstarIsland/tests/fixtures/: round_detail.json
ObjectDetection/: .gitignore  README.md  augment_copypaste.py  build_reference_embeddings.py  convert_coco_to_yolo.py  evaluate.py  plan.md  pyproject.toml  run.py  train.py  train_crop_classifier.py  train_rtdetr.py  train_yolo11x.py  train_yolo11x_v4.py
ObjectDetection/submission/: run.py
ObjectDetection/submission/weights/: pca_components.json  ref_embeddings.json  ref_labels.json
(+519 files in other folders)
