[project]
name = "objectdetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ensemble-boxes>=1.0.9",
    "onnxruntime>=1.24.4",
    "opencv-python-headless>=4.13.0.92",
    "ultralytics>=8.4.24",
]

[tool.uv]
override-dependencies = [
    "opencv-python-headless>=4.13.0.92",
]
